--- a/Data_Cleansing.ipynb
+++ b/Data_Cleansing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/iR8xLN6xgtSyEMzyklsq",
+      "authorship_tag": "ABX9TyOeF/BkyKgyUeF+b67JTDGx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1680,6 +1680,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# using regex removing spl charecters from Name column\n",
         "emp['Name'] = emp['Name'].str.replace(r'\\W', '', regex=True)\n",
         "emp['Name']"
       ],
@@ -4862,10 +4863,10 @@
       ],
       "metadata": {
         "id": "mlqhWmp2vgH-",
-        "outputId": "3d937c31-1300-4f6c-b94d-911e88ea4d26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d937c31-1300-4f6c-b94d-911e88ea4d26"
       },
       "execution_count": 31,
       "outputs": [
@@ -4899,12 +4900,12 @@
         "clean_data"
       ],
       "metadata": {
-        "id": "gOIOTkZW11XP",
-        "outputId": "bea07e5e-fff5-43c4-a6f4-f311db4720f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "gOIOTkZW11XP",
+        "outputId": "bea07e5e-fff5-43c4-a6f4-f311db4720f1"
       },
       "execution_count": 32,
       "outputs": [
@@ -5291,12 +5292,12 @@
         "os.getcwd()"
       ],
       "metadata": {
-        "id": "iEcmvehH2iT_",
-        "outputId": "aa7becd8-a8fa-4a21-ff5f-e4f688fc4c24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "iEcmvehH2iT_",
+        "outputId": "aa7becd8-a8fa-4a21-ff5f-e4f688fc4c24"
       },
       "execution_count": 33,
       "outputs": [
