--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -14,9 +14,10 @@
         "BYXxh39pQMyr",
         "8h2N4l8xWzb1",
         "wCsGIDwSVhc5",
-        "HxhStlm4bTJ7"
+        "HxhStlm4bTJ7",
+        "qRa2FAOFpVJ0"
       ],
-      "authorship_tag": "ABX9TyMlB/OkNOOAJYFlXh0NwmiE",
+      "authorship_tag": "ABX9TyNx+5uUkTYn6pS1zrCpN4g5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1722,9 +1723,9 @@
           "height": 36
         },
         "id": "A3juatSrthp8",
-        "outputId": "ac9651ea-d044-4b1a-b76d-fc621e4cfac4"
+        "outputId": "a3f9a946-4811-4347-bf10-d4f3ad5ddb4f"
       },
-      "execution_count": 79,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1737,7 +1738,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 2
         }
       ]
     },
@@ -1803,9 +1804,237 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a[4] # fetch 5th element of the string"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "73qc6tXowpm8",
+        "outputId": "ede0b319-2492-492e-edb7-d45b45860221"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'O'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "rN-Ow6-Jz4ZS",
+        "outputId": "4592a2d6-ab15-4fe6-8b50-3d5ce9358c55"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### String Slicing"
+      ],
+      "metadata": {
+        "id": "ii8MxjxH0DnG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[0:5] # Fetch all characters from 0 to 5 index Location excluding 5th index"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "SrHp3uNKz7rO",
+        "outputId": "f28d661d-dada-452a-e051-b8eee806d7a4"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'HELLO'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[6:12]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "OdB4PNrpo3VL",
+        "outputId": "c4d43390-a7b2-4f2b-d8ab-c794b8847b39"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'PYTHON'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[-4:]# Retreive Last four characters of the string"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "AqZDSP9pqHJR",
+        "outputId": "d30d4cef-b8a0-4701-c711-1a44f4898fb9"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'THON'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[-8:]# Retrive Last six characters of the string"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "l1FlGp-4qUSa",
+        "outputId": "7aa0668f-5d34-439b-8e0b-44710abcd299"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'O PYTHON'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[:9]# Retrive first 9 characters of the string"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "RSeoWqJKqk0O",
+        "outputId": "6c95faf0-63e2-490b-873a-37756330d553"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'HELLO PYT'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Update and Delete String**"
+      ],
+      "metadata": {
+        "id": "s8kA8Vsdyt_T"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "73qc6tXowpm8"
+        "id": "Wd6Uycb3rCtn"
       },
       "execution_count": null,
       "outputs": []
