--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -17,7 +17,7 @@
         "HxhStlm4bTJ7",
         "qRa2FAOFpVJ0"
       ],
-      "authorship_tag": "ABX9TyNx+5uUkTYn6pS1zrCpN4g5",
+      "authorship_tag": "ABX9TyOx9L5CQ+gAAq/ANn9gjBkM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "qngsfwBAdbNi"
       },
@@ -67,7 +67,7 @@
         "id": "4BT9k7y2kkqe",
         "outputId": "f050acac-0d3c-4d59-d87d-f274f2ee6b67"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +106,7 @@
         "id": "QMHVTCQOd5DV",
         "outputId": "c289f9da-61aa-4bc9-b434-5c4720ad9b49"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "id": "Uoybq5tsfDRg",
         "outputId": "44df53c2-102c-4846-c30f-401f24e718ab"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
         "id": "ne0zProOfUa4",
         "outputId": "bc9b80b0-7c76-4e92-aaab-d6e029ec1ddd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -191,7 +191,7 @@
         "id": "nHgqvL0Wf5KA",
         "outputId": "3c7d4e0c-6f32-49e5-fac8-c30c3f3f600d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -216,7 +216,7 @@
         "id": "lshgwEFugQKv",
         "outputId": "941a8bd4-606b-483f-c63e-b7e6ffd0cbc2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -241,7 +241,7 @@
         "id": "hCvY2GGkgvBN",
         "outputId": "c1639ea8-fada-459e-c086-c06922688210"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -267,7 +267,7 @@
         "id": "GkG5AtvyhFmg",
         "outputId": "25eee567-b557-4c98-df0e-c35c596465ec"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -298,7 +298,7 @@
         "id": "aNGtly_nhOtI",
         "outputId": "345b4174-5170-4d19-cea5-e9c506ed026c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +325,7 @@
         "id": "8W7k4Lyxh5pL",
         "outputId": "caa560f8-b435-427e-db8a-f930bb1e017b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
       "metadata": {
         "id": "cV3mlXgIkfGl"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "metadata": {
         "id": "hmtR5Mm7qT_M"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +401,7 @@
         "id": "zXikYITCqnP4",
         "outputId": "d0e11072-de4a-462d-d045-177905a29171"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
         "id": "xGQFohacK9-s",
         "outputId": "6a61639e-6deb-46ef-f209-25f9ef5ffa71"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +458,7 @@
         "id": "c4mEmHW8J-3B",
         "outputId": "75def0f4-4b94-48fe-aa80-91048894a37f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +490,7 @@
         "id": "yVUA_hCHKkCm",
         "outputId": "f180f8fa-f375-43c2-d2e3-9e574cf3d6a3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
         "id": "WOgZGy5kLTLj",
         "outputId": "a66b9c6c-a010-44f4-d781-371827bedcf0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
         "id": "vrc-BzTbMBfa",
         "outputId": "9a714d15-6c03-4331-c05f-5a89c0378992"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -579,7 +579,7 @@
         "id": "w5eQhOtqMTJ-",
         "outputId": "0295096e-f122-4e3e-9421-0354c6b1ce1c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +609,7 @@
         "id": "saxw2DwGM9MU",
         "outputId": "cb03ec8a-3092-4c74-ed11-3dfd913972c7"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +647,7 @@
       "metadata": {
         "id": "EDmJew-CNEQy"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +662,7 @@
         "id": "gvQdmYcwN-GS",
         "outputId": "02526fa8-fa6b-425d-a58f-4a9e5005e33e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +689,7 @@
         "id": "WbLY556cOB6G",
         "outputId": "c783a1e4-27f5-4afd-b9fe-59a1a0852e5c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -719,7 +719,7 @@
       "metadata": {
         "id": "E6_xuVDIOmM_"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,7 +734,7 @@
         "id": "Tg8omWriOpr-",
         "outputId": "dd047e79-2529-484c-8f64-c161b842eb70"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +757,7 @@
         "id": "saSeKoZMOug7",
         "outputId": "81ac2606-2936-437b-87a0-7a7a87e77d6f"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,7 +781,7 @@
         "id": "ZTyZLLnROwgj",
         "outputId": "a40550e1-2432-428a-9947-92c184116574"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -811,7 +811,7 @@
         "id": "-66kNpbUOztA",
         "outputId": "d150abe8-3ccf-4beb-beee-f54775965f91"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "id": "Aymi2QVUPTk-",
         "outputId": "bfd2d2dc-3c5c-44ba-e4e4-c27e7aecbe6e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,7 +884,7 @@
         "id": "aq6ESyRyQ6Jg",
         "outputId": "7162340f-c436-45b2-ed5c-1ada0233f03f"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +919,7 @@
         "id": "miN9kA7hRVF7",
         "outputId": "842775b7-56e2-4880-d1aa-663d3b711e4c"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,7 +958,7 @@
         "id": "0hVwdAJaYerM",
         "outputId": "ec513d5c-c082-4545-8ce3-2666c64200b1"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +988,7 @@
         "id": "DGgEvEtrYt3K",
         "outputId": "a60d0183-f6d6-43e1-db39-74f7a4ade921"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1018,7 @@
         "id": "IvSHQYEkU17E",
         "outputId": "e9a7437d-fd64-40ee-8b7f-c540b7468053"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,7 +1056,7 @@
         "id": "izlYRK6JSNVP",
         "outputId": "5ae7ed02-da46-445a-f3d1-d33175be5415"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1094,7 @@
         "id": "CUkXQF3BVBle",
         "outputId": "64d511d1-05af-4c28-afbe-2a6b2150b779"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1129,7 @@
         "id": "iea_82DmXpVe",
         "outputId": "9331e3c5-6a70-4621-d9bf-8675941dfcea"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1156,7 @@
         "id": "0xDpL-LzcM0a",
         "outputId": "6c199830-b33a-4e64-a6a2-0cc7e533022c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,7 +1196,7 @@
         "id": "r31RseCsdEB0",
         "outputId": "8f608187-3569-411c-c1f1-61a49fc26912"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,7 +1223,7 @@
         "id": "Sn6uK3E0fYM0",
         "outputId": "7b29a534-e241-4413-9568-baac7e1109d5"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
         "id": "am8qC63nf1H1",
         "outputId": "8dff699c-014a-4578-91fc-f322f4d6bc92"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1286,7 +1286,7 @@
         "id": "woeeX6EWnlNz",
         "outputId": "30c3ce2c-8067-4bc5-c1c2-3e8cfd7199d5"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1312,7 +1312,7 @@
         "id": "S6yHpbmHoRMk",
         "outputId": "cd8f267e-6211-4279-f466-bea527ba09db"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1338,7 +1338,7 @@
         "id": "1t6QFYNBo8y5",
         "outputId": "f8189eee-3113-452f-d1f3-b3ef956c4cb2"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1364,7 +1364,7 @@
         "id": "l1sOhRIypGrU",
         "outputId": "a37b81cd-e760-43ff-ace8-75c4c2a4dc32"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1405,7 +1405,7 @@
         "id": "XthiFBN3pqDx",
         "outputId": "68b0bc8d-07f3-48fe-95dc-120af96a4ddc"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1439,7 +1439,7 @@
         "id": "wXisWMvtpOZB",
         "outputId": "92382e84-9cc0-4e2d-f550-d47357e542a5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1465,7 +1465,7 @@
         "id": "0F2hCRHCqOzl",
         "outputId": "02fed416-25cc-462e-980b-eae521347375"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1491,7 +1491,7 @@
         "id": "c-iSDyK3qZjY",
         "outputId": "11318900-2fe8-4193-d130-7cce489b1426"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1517,7 +1517,7 @@
         "id": "pQzktKBrqeGy",
         "outputId": "eead38fe-e7ae-49e8-a10a-147f2172bb5b"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1555,7 +1555,7 @@
         "id": "PRoSC_Vgqg0O",
         "outputId": "d8b3c8f4-2623-4d40-8575-2ce28312c78b"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1579,7 @@
         "id": "Iv-0Vr7prKYs",
         "outputId": "f1ad3508-a98c-49f0-d4bf-9e35b460b390"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1604,7 @@
         "id": "ADZgIeZTr1sH",
         "outputId": "bbbd4c73-6180-4b07-e4a7-1fbb18eec1ba"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,7 +1630,7 @@
         "id": "WGPgSdZysRlR",
         "outputId": "3d3d2e5b-d14b-4cf3-9247-b786273e8705"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1656,7 @@
         "id": "SRpR41Y-sdP9",
         "outputId": "85334f41-92d8-4310-d321-5e85d6f55b87"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1679,7 +1679,7 @@
         "id": "nilMRWZps3ek",
         "outputId": "ca230f5f-6e30-4008-acdb-f1988b49a202"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1725,7 +1725,7 @@
         "id": "A3juatSrthp8",
         "outputId": "a3f9a946-4811-4347-bf10-d4f3ad5ddb4f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1755,7 +1755,7 @@
         "id": "Avbgh6Z-tM4u",
         "outputId": "65548536-4b3d-4929-c664-4001d8fccfd5"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1785,7 +1785,7 @@
         "id": "2vDt5vhLwdbA",
         "outputId": "e32edb84-0677-4867-ac24-1db9201c5eca"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1815,7 +1815,7 @@
         "id": "73qc6tXowpm8",
         "outputId": "ede0b319-2492-492e-edb7-d45b45860221"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1845,7 +1845,7 @@
         "id": "rN-Ow6-Jz4ZS",
         "outputId": "4592a2d6-ab15-4fe6-8b50-3d5ce9358c55"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1884,7 +1884,7 @@
         "id": "SrHp3uNKz7rO",
         "outputId": "f28d661d-dada-452a-e051-b8eee806d7a4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1914,7 +1914,7 @@
         "id": "OdB4PNrpo3VL",
         "outputId": "c4d43390-a7b2-4f2b-d8ab-c794b8847b39"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1944,7 +1944,7 @@
         "id": "AqZDSP9pqHJR",
         "outputId": "d30d4cef-b8a0-4701-c711-1a44f4898fb9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1974,7 +1974,7 @@
         "id": "l1FlGp-4qUSa",
         "outputId": "7aa0668f-5d34-439b-8e0b-44710abcd299"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2004,7 +2004,7 @@
         "id": "RSeoWqJKqk0O",
         "outputId": "6c95faf0-63e2-490b-873a-37756330d553"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2032,9 +2032,40 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a = 'HELLO PYTHON'\n",
+        "a\n"
+      ],
+      "metadata": {
+        "id": "Wd6Uycb3rCtn",
+        "outputId": "e4ece752-9640-442e-c800-97c86dee5918",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'HELLO PYTHON'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Wd6Uycb3rCtn"
+        "id": "V4x9nUdJz_Tr"
       },
       "execution_count": null,
       "outputs": []
