--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -17,7 +17,7 @@
         "HxhStlm4bTJ7",
         "qRa2FAOFpVJ0"
       ],
-      "authorship_tag": "ABX9TyOx9L5CQ+gAAq/ANn9gjBkM",
+      "authorship_tag": "ABX9TyNDj7RYvQ2tEEsk22pT94+b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2033,18 +2033,18 @@
     {
       "cell_type": "code",
       "source": [
-        "a = 'HELLO PYTHON'\n",
-        "a\n"
+        "str1 = 'HELLO PYTHON'\n",
+        "str1\n"
       ],
       "metadata": {
         "id": "Wd6Uycb3rCtn",
-        "outputId": "e4ece752-9640-442e-c800-97c86dee5918",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "8d90f550-837e-4556-d83a-5415368cacaf"
       },
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2057,7 +2057,347 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Strings are immutable which means elements of a string cannot be changed\n",
+        "print(str1[0:5])\n",
+        "str1[0:5]=\"Treat\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "id": "V4x9nUdJz_Tr",
+        "outputId": "c586707d-f299-41d3-bcc7-0bd90b96f992"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HELLO\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'str' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-39d8aabaa1ca>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Strings are immutable which means elements of a string cannot be changed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstr1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Treat\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(str1)\n",
+        "del str1 # Delete a string\n",
+        "print('deleted str1')\n",
+        "print(str1)"
+      ],
+      "metadata": {
+        "id": "9ybniifD2IkP",
+        "outputId": "8dce8407-ce4f-4052-fbcd-26c388e16127",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 222
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HELLO PYTHON\n",
+            "deleted str1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'str1' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-72beee405681>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mstr1\u001b[0m \u001b[0;31m# Delete a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'deleted str1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'str1' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **String Concatenation**"
+      ],
+      "metadata": {
+        "id": "16LGKqsQ3Qqt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# string concatenation\n",
+        "s1 = 'Hello'\n",
+        "s2 = 'World'\n",
+        "s3 = s1 + s2\n",
+        "print(s3)"
+      ],
+      "metadata": {
+        "id": "7hto9DTt2270",
+        "outputId": "87822d16-3934-490d-e3e7-eb9578674bc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# string concatenation\n",
+        "s1 = 'Hello'\n",
+        "s2 = 'World'\n",
+        "s3 = s1 + \" \"+ s2\n",
+        "print(s3)"
+      ],
+      "metadata": {
+        "id": "a0PkjwEv4SUF",
+        "outputId": "32257cc3-44bb-472a-97e8-080b8a49df14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Iterating Through A String**"
+      ],
+      "metadata": {
+        "id": "00czjxQs4l2V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str2 = 'Good Evening'\n",
+        "str2"
+      ],
+      "metadata": {
+        "id": "_NGuEOU54ddZ",
+        "outputId": "c7bd08ac-42ee-42ba-df04-ba0674a16b13",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Good Evening'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# iteration\n",
+        "for i in str2:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "EGPfa51F5Aee",
+        "outputId": "916aa9f9-601d-459f-cec5-ce524b755e3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "G\n",
+            "o\n",
+            "o\n",
+            "d\n",
+            " \n",
+            "E\n",
+            "v\n",
+            "e\n",
+            "n\n",
+            "i\n",
+            "n\n",
+            "g\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in enumerate(str2):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "mallhBRO5Kjh",
+        "outputId": "d89657dc-38a3-4d81-e3d8-b76cab5bd8a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0, 'G')\n",
+            "(1, 'o')\n",
+            "(2, 'o')\n",
+            "(3, 'd')\n",
+            "(4, ' ')\n",
+            "(5, 'E')\n",
+            "(6, 'v')\n",
+            "(7, 'e')\n",
+            "(8, 'n')\n",
+            "(9, 'i')\n",
+            "(10, 'n')\n",
+            "(11, 'g')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(enumerate(str2))\n",
+        "print('-'*25)\n",
+        "print(list(enumerate(str2)))\n",
+        "print('-'*25)\n",
+        "list(enumerate(str2))"
+      ],
+      "metadata": {
+        "id": "mqOWzBpi5TbJ",
+        "outputId": "da570292-a1ad-4cab-e642-dd33a76fdb52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<enumerate object at 0x78ffcde0c950>\n",
+            "-------------------------\n",
+            "[(0, 'G'), (1, 'o'), (2, 'o'), (3, 'd'), (4, ' '), (5, 'E'), (6, 'v'), (7, 'e'), (8, 'n'), (9, 'i'), (10, 'n'), (11, 'g')]\n",
+            "-------------------------\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0, 'G'),\n",
+              " (1, 'o'),\n",
+              " (2, 'o'),\n",
+              " (3, 'd'),\n",
+              " (4, ' '),\n",
+              " (5, 'E'),\n",
+              " (6, 'v'),\n",
+              " (7, 'e'),\n",
+              " (8, 'n'),\n",
+              " (9, 'i'),\n",
+              " (10, 'n'),\n",
+              " (11, 'g')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **String Membership**"
+      ],
+      "metadata": {
+        "id": "bsDzcPG385BD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# String Membership\n",
+        "str3 = 'Hello Everyone'\n",
+        "\n",
+        "print('Hello' in str3)#check whether substring \"hello\" is present in string str3\n",
+        "print('Everyone' in str3)#check whether substring \"eveyone\" is present in string str3\n",
+        "print('Good' in str3)#check whether substring \"good\" is present in string str3\n"
+      ],
+      "metadata": {
+        "id": "B6cFSq2M50va",
+        "outputId": "c26e526a-707e-4bc6-e4db-a6c1b956d36d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
         }
       ]
     },
@@ -2065,7 +2405,25 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "V4x9nUdJz_Tr"
+        "id": "YgSqRIAn6Z-0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mW4zfMQJ6aLH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Zjs-b5Jl6aXB"
       },
       "execution_count": null,
       "outputs": []
