--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -17,7 +17,7 @@
         "HxhStlm4bTJ7",
         "qRa2FAOFpVJ0"
       ],
-      "authorship_tag": "ABX9TyNDj7RYvQ2tEEsk22pT94+b",
+      "authorship_tag": "ABX9TyOgoO/pqM3DIfHkeSTbGWB1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2107,12 +2107,12 @@
         "print(str1)"
       ],
       "metadata": {
-        "id": "9ybniifD2IkP",
-        "outputId": "8dce8407-ce4f-4052-fbcd-26c388e16127",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 222
-        }
+        },
+        "id": "9ybniifD2IkP",
+        "outputId": "8dce8407-ce4f-4052-fbcd-26c388e16127"
       },
       "execution_count": 11,
       "outputs": [
@@ -2156,11 +2156,11 @@
         "print(s3)"
       ],
       "metadata": {
-        "id": "7hto9DTt2270",
-        "outputId": "87822d16-3934-490d-e3e7-eb9578674bc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7hto9DTt2270",
+        "outputId": "87822d16-3934-490d-e3e7-eb9578674bc3"
       },
       "execution_count": 12,
       "outputs": [
@@ -2183,11 +2183,11 @@
         "print(s3)"
       ],
       "metadata": {
-        "id": "a0PkjwEv4SUF",
-        "outputId": "32257cc3-44bb-472a-97e8-080b8a49df14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a0PkjwEv4SUF",
+        "outputId": "32257cc3-44bb-472a-97e8-080b8a49df14"
       },
       "execution_count": 13,
       "outputs": [
@@ -2216,12 +2216,12 @@
         "str2"
       ],
       "metadata": {
-        "id": "_NGuEOU54ddZ",
-        "outputId": "c7bd08ac-42ee-42ba-df04-ba0674a16b13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "_NGuEOU54ddZ",
+        "outputId": "c7bd08ac-42ee-42ba-df04-ba0674a16b13"
       },
       "execution_count": 14,
       "outputs": [
@@ -2248,11 +2248,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "EGPfa51F5Aee",
-        "outputId": "916aa9f9-601d-459f-cec5-ce524b755e3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EGPfa51F5Aee",
+        "outputId": "916aa9f9-601d-459f-cec5-ce524b755e3d"
       },
       "execution_count": 15,
       "outputs": [
@@ -2283,11 +2283,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "mallhBRO5Kjh",
-        "outputId": "d89657dc-38a3-4d81-e3d8-b76cab5bd8a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mallhBRO5Kjh",
+        "outputId": "d89657dc-38a3-4d81-e3d8-b76cab5bd8a1"
       },
       "execution_count": 17,
       "outputs": [
@@ -2321,11 +2321,11 @@
         "list(enumerate(str2))"
       ],
       "metadata": {
-        "id": "mqOWzBpi5TbJ",
-        "outputId": "da570292-a1ad-4cab-e642-dd33a76fdb52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mqOWzBpi5TbJ",
+        "outputId": "da570292-a1ad-4cab-e642-dd33a76fdb52"
       },
       "execution_count": 20,
       "outputs": [
@@ -2382,11 +2382,11 @@
         "print('Good' in str3)#check whether substring \"good\" is present in string str3\n"
       ],
       "metadata": {
-        "id": "B6cFSq2M50va",
-        "outputId": "c26e526a-707e-4bc6-e4db-a6c1b956d36d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B6cFSq2M50va",
+        "outputId": "c26e526a-707e-4bc6-e4db-a6c1b956d36d"
       },
       "execution_count": 21,
       "outputs": [
@@ -2402,28 +2402,245 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### **String Partitioning**"
+      ],
       "metadata": {
-        "id": "YgSqRIAn6Z-0"
+        "id": "40s6g2OHXtgr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        " The partition() method searches for a specified string and splits the string\n",
+        " into 3 parts in a tuple.\n",
+        " - The first element contains the part before the argument string.\n",
+        " - The second element contains the argument string.\n",
+        " - The third element contains the part after the argument string.\n",
+        " \"\"\"\n",
+        "str.partition.__doc__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "id": "mW4zfMQJ6aLH",
+        "outputId": "13d3dac3-c66c-4c2e-f6db-78f3bdaeb944"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Partition the string into three parts using the given separator.\\n\\nThis will search for the separator in the string.  If the separator is found,\\nreturns a 3-tuple containing the part before the separator, the separator\\nitself, and the part after it.\\n\\nIf the separator is not found, returns a 3-tuple containing the original string\\nand two empty strings.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str5 = \"Natural Language Processing with Python and R and Java\"\n",
+        "f = str5.partition(\"and\") # first occurence\n",
+        "print(f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YgSqRIAn6Z-0",
+        "outputId": "84ac9a45-8c7e-4f9a-d4c2-2bad201997e0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Natural Language Processing with Python ', 'and', ' R and Java')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "The rpartition() method searches for the last occurence of the specified\n",
+        "string and creates a tuple containing three elements.\n",
+        "\n",
+        "- The first element contains the part before the argument string.\n",
+        "- The second element contains the argument string.\n",
+        "- The third element contains the part after the argument string.\n",
+        " \"\"\"\n",
+        "str.rpartition.__doc__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "id": "Zjs-b5Jl6aXB",
+        "outputId": "81fe1e0b-5112-462c-dbbf-91d94fe70cfe"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Partition the string into three parts using the given separator.\\n\\nThis will search for the separator in the string, starting at the end. If\\nthe separator is found, returns a 3-tuple containing the part before the\\nseparator, the separator itself, and the part after it.\\n\\nIf the separator is not found, returns a 3-tuple containing two empty strings\\nand the original string.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str5 = \"Natural Language Processing with Python and R and Java\"\n",
+        "l = str5.rpartition(\"and\") # last occurence\n",
+        "print(l)"
+      ],
+      "metadata": {
+        "id": "oCVUMaQtZfa1",
+        "outputId": "5cfbe46a-4dbc-42d0-c117-43b5da9121d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Natural Language Processing with Python and R ', 'and', ' Java')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **String Functions**"
+      ],
+      "metadata": {
+        "id": "zPQD211VcTwQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str.strip.__doc__"
+      ],
+      "metadata": {
+        "id": "2z7bnKqXkirA",
+        "outputId": "48f912f3-3529-4650-9bfb-325bca2d8d59",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Return a copy of the string with leading and trailing whitespace removed.\\n\\nIf chars is given and not None, remove characters in chars instead.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mystr1 = \"    Hello Everyone           \"\n",
+        "mystr1"
+      ],
+      "metadata": {
+        "id": "xyzNAwMvbs9d",
+        "outputId": "f18d91ec-a556-42ad-9ff9-8a6d705e5273",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'    Hello Everyone           '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using \"strip()\" Remove white space from beginning and end\n",
+        "mystr1.strip()"
+      ],
+      "metadata": {
+        "id": "Yewz2yA0kA1Z",
+        "outputId": "6692fcc8-bda0-4990-c2f2-b8ffa3a91d21",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello Everyone'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mW4zfMQJ6aLH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Zjs-b5Jl6aXB"
+        "id": "2LE9yzDlkpO7"
       },
       "execution_count": null,
       "outputs": []
